<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/requestInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_ring_your_bank" />

    <EditText
        android:id="@+id/operatorPinInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/operator_pin"
        android:inputType="text|textPassword"
        android:visibility="gone"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/authCodeInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_code"
        android:inputType="text"
        android:layout_marginTop="8dp"/>

</LinearLayout>